fix: correctly align features

--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -599,6 +599,7 @@
 
 .featureGrid {
   flex-direction: row;
+  align-items: flex-start;
 }
 
 .feature {
